--- a/lombardidev-astro/src/components/layout/Footer.astro
+++ b/lombardidev-astro/src/components/layout/Footer.astro
@@ -1,42 +1,43 @@
 ---
-import astroLogo from "@/assets/icons/astro-logo-light-gradient.svg";
+import astroLogo from "@/assets/icons/full-logo-light.svg";
 
 const currentYear = new Date().getFullYear();
+
+const socialLinks: Array<{ label: string; href: string; icon: string }> = [
+  { label: "GitHub", href: "https://github.com/Lombardimn", icon: "ph-github-logo" },
+  { label: "LinkedIn", href: "https://linkedin.com/in/mnlombardi/", icon: "ph-linkedin-logo"},
+]
 ---
 
-<footer class="h-20 text-xl font-light bg-gray-900 content-center">
-  <section class="max-w-7xl mx-auto flex flex-row justify-between items-center">
-    <div class="flex flex-row gap-5 w-1/2 items-center">
+<footer class="h-auto text-xl font-light bg-slate-100 dark:bg-gray-950 content-center border-t-[0.5px] border-slate-300">
+  <section class="max-w-7xl mx-auto flex flex-col justify-center items-center gap-2">
+    <div class="flex flex-col items-center gap-2 pt-2">
       <p class="flex flex-row items-center">
         Desarrollado con
         <a href="https://astro.build/" target="_blank" no-referrer no-opener>
-          <img src={astroLogo.src} alt="Astro Homepage" class="w-24 h-auto" />
+          <img src={astroLogo.src} alt="Astro Homepage" class="w-24 h-auto px-2" />
         </a>
       </p>
       <p>&copy; {currentYear} @lombardidev</p>
     </div>
-    <div class="flex flex-row gap-5 w-1/2 items-center justify-end">
+    <div class="flex flex-row items-center justify-end pb-4 text-lg">
       <ul class="flex flex-row gap-5">
-        <li>
-          <a
-            href="https://github.com/Lombardimn"
-            target="_blank"
-            no-referrer
-            no-opener
-          >
-            GitHub
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://linkedin.com/in/mnlombardi/"
-            target="_blank"
-            no-referrer
-            no-opener
-          >
-            LinkedIn
-          </a>
-        </li>
+        {
+          socialLinks.map((link) => (
+            <li class="h-5">
+              <a 
+                href={link.href}
+                target="_blank"
+                no-referrer
+                no-opener
+                class="hover:text-teal-700 focus:text-teal-700 hover:font-semibold transition-colors ease-in-out duration-300"
+              >
+                <span>{link.label}</span>
+                <i class={`ph-duotone ${link.icon} sr-only`}></i>
+              </a>
+            </li>
+          ))
+        }
       </ul>
     </div>
   </section>
