--- a/lombardidev-astro/src/layouts/BaseLayout.astro
+++ b/lombardidev-astro/src/layouts/BaseLayout.astro
@@ -12,6 +12,8 @@ import '@/styles/global.css';
 		<meta name="generator" content={Astro.generator} />
 		<title>@lombardidev | Personal Site</title>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 		<link
       rel="stylesheet"
       type="text/css"
@@ -28,4 +30,7 @@ import '@/styles/global.css';
 	</body>
 	
 	<Footer />
+
+	  <!-- Swiper JS -->
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </html>
