--- a/lombardidev-astro/src/pages/contact.astro
+++ b/lombardidev-astro/src/pages/contact.astro
@@ -6,9 +6,9 @@ interface Props {
   description: string
 }
 
-const { title = 'Sobre Mí | @lombardidev', description = 'Detalle de mi experiencia y educación profesional.' } = Astro.props
+const { title = 'Conctacto | @lombardidev', description = 'Como puedes contactarme.' } = Astro.props
 ---
 
 <BaseLayout title={title} description={description} >
-	<h1>about</h1>
+	<h1>contact</h1>
 </BaseLayout>
