--- a/lombardidev-astro/src/components/layout/Footer.astro
+++ b/lombardidev-astro/src/components/layout/Footer.astro
@@ -4,18 +4,34 @@ import astroLogo from "@/assets/icons/full-logo-light.svg";
 const currentYear = new Date().getFullYear();
 
 const socialLinks: Array<{ label: string; href: string; icon: string }> = [
-  { label: "GitHub", href: "https://github.com/Lombardimn", icon: "ph-github-logo" },
-  { label: "LinkedIn", href: "https://linkedin.com/in/mnlombardi/", icon: "ph-linkedin-logo"},
-]
+  {
+    label: "GitHub",
+    href: "https://github.com/Lombardimn",
+    icon: "ph-github-logo",
+  },
+  {
+    label: "LinkedIn",
+    href: "https://linkedin.com/in/mnlombardi/",
+    icon: "ph-linkedin-logo",
+  },
+];
 ---
 
-<footer class="h-auto text-xl font-light bg-slate-100 dark:bg-gray-950 content-center border-t-[0.5px] border-slate-300">
-  <section class="max-w-7xl mx-auto flex flex-col justify-center items-center gap-2">
+<footer
+  class="h-auto pt-5 text-xl font-light bg-white dark:bg-gray-950 content-center border-t-[0.5px] border-slate-300"
+>
+  <section
+    class="max-w-7xl mx-auto flex flex-col justify-center items-center gap-2"
+  >
     <div class="flex flex-col items-center gap-2 pt-2">
       <p class="flex flex-row items-center">
         Desarrollado con
         <a href="https://astro.build/" target="_blank" no-referrer no-opener>
-          <img src={astroLogo.src} alt="Astro Homepage" class="w-24 h-auto px-2" />
+          <img
+            src={astroLogo.src}
+            alt="Astro Homepage"
+            class="w-24 h-auto px-2"
+          />
         </a>
       </p>
       <p>&copy; {currentYear} @lombardidev</p>
@@ -25,7 +41,7 @@ const socialLinks: Array<{ label: string; href: string; icon: string }> = [
         {
           socialLinks.map((link) => (
             <li class="h-5">
-              <a 
+              <a
                 href={link.href}
                 target="_blank"
                 no-referrer
@@ -33,12 +49,22 @@ const socialLinks: Array<{ label: string; href: string; icon: string }> = [
                 class="hover:text-teal-700 focus:text-teal-700 hover:font-semibold transition-colors ease-in-out duration-300"
               >
                 <span>{link.label}</span>
-                <i class={`ph-duotone ${link.icon} sr-only`}></i>
+                <i class={`ph-duotone ${link.icon} sr-only`} />
               </a>
             </li>
           ))
         }
       </ul>
+    </div>
+
+    <div class=" text-center">
+      <a href="https://scrummanager.com/website/c/profile/member.php?id=48869">
+        <img
+          alt="Product owner"
+          src="https://scrummanager.com/intranet/files/credential/8/smalllogo.png"
+          class="w-24 h-auto px-2"
+        />
+      </a>
     </div>
   </section>
 </footer>
