--- a/lombardidev-astro/src/components/layout/Hero.astro
+++ b/lombardidev-astro/src/components/layout/Hero.astro
@@ -1,19 +1,20 @@
 ---
 interface Props {
   title: string;
-  subtitle: string;
-  description: string;
+  subtitle?: string;
+  description?: string;
+  reverse?: boolean;
   align?: 'start' | 'center';
   class?: string;
 }
 
-const { title, subtitle, description, align = 'center', class: className } = Astro.props as Props;
+const { title, subtitle, description, align = 'center', reverse = false, class: className } = Astro.props as Props;
 ---
 
 <section 
   id="hero"
   class={`text-${align} ${className}`}>
-  <div class="space-y-2">
+  <div class={`space-y-2 flex flex-col ${reverse ? 'flex-col-reverse' : ''}`}>
     <h2 class={`text-3xl font-semibold text-${align} text-teal-700`}>{subtitle}</h2>
     <h1 class={`text-5xl font-bold text-${align}`}>{title}</h1>
   </div>
