--- a/lombardidev-astro/src/layouts/BaseLayout.astro
+++ b/lombardidev-astro/src/layouts/BaseLayout.astro
@@ -1,36 +1,24 @@
 ---
 import Footer from '@/components/layout/Footer.astro';
+import Head from '@/components/layout/Head.astro';
 import Header from '@/components/layout/Header.astro';
 import '@/styles/global.css';
+
+interface Props {
+  title: string
+  description: string
+}
+
+const { title, description } = Astro.props
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>@lombardidev | Personal Site</title>
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-		<link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2/src/duotone/style.css"
-    />
-  </head>
-	</head>
-
+	<Head title={title} description={description} />
 	<Header />
-	
 	<body>
 		{/** Renderiza el contenido  */}
 		<slot />
 	</body>
-	
 	<Footer />
-
-	  <!-- Swiper JS -->
-		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </html>
