--- a/lombardidev-astro/src/pages/index.astro
+++ b/lombardidev-astro/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import avatar from '@/assets/images/avatar.png';
+import Contact from '@/components/layout/Contact.astro';
 import Features from '@/components/layout/Features.astro';
 import Gallery from '@/components/layout/Gallery.astro';
 import Grid from '@/components/layout/Grid.astro';
@@ -13,9 +14,16 @@ import { getCollection } from 'astro:content';
 const works = (await getCollection('works')).sort(
 	(a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
 ).slice(0, 4)
+
+interface Props {
+  title: string
+  description: string
+}
+
+const { title , description } = Astro.props
 ---
 
-<BaseLayout>
+<BaseLayout title={title} description={description} >
 	<main class="container flex-1 mt-24 max-w-7xl mx-auto">
 		<Hero
 			title="Soy Matias Lombardi"
@@ -65,10 +73,6 @@ const works = (await getCollection('works')).sort(
 
 		<Testimonials />
 
-
-		<div class="bg-red-500">
-			<p>CallToAction</p>
-		</div>
-
+		<Contact />
 	</main>
 </BaseLayout>
