--- a/lombardidev-astro/src/pages/projects/[slug].astro
+++ b/lombardidev-astro/src/pages/projects/[slug].astro
@@ -1,6 +1,8 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
+import Pill from "@/components/ui/Pill.astro";
 import { getCollection, render } from "astro:content";
+import { formatDate } from "@/scripts/formatDate";
 
 
 export async function getStaticPaths() {
@@ -17,26 +19,58 @@ const { data } = work
 const { title, description, publishDate, img, repo, demo, status, tags } = data
 
 const { Content } = await render(work)
+
+const publishDateFormated = formatDate(publishDate)
 ---
 
-<BaseLayout>
-  <main class="flex flex-col mt-24">
-  <section>
-    <h1>{title}</h1>
-    <p>{description}</p>
-    <p>{publishDate}</p>
-    <img src={img} alt={title} />
-  </section>
+<BaseLayout title={`${title} | @lombardidev`} description={description} >
+  <main class="container flex-1 mt-24 max-w-7xl mx-auto">
+    <section class="mx-4">
+      <div class="flex justify-end items-center">
+        <a href="/projects" class="transition-colors duration-300 ease-in-out hover:underline hover:text-teal-700">
+          <i class="ph ph-arrow-left" style="font-size: 16px;"></i>
+          Volver
+        </a>
+      </div>
+      <h1 class="text-3xl font-bold">{title}</h1>
+      <p class="font-light pb-4">{description}</p>
+      
+      <div class="flex items-center justify-between py-1">
+        <span class="font-light text-xs mx-2 text-slate-600">{publishDateFormated}</span>
+        <div class="bg-green-500 rounded-md border-[0.5px] border-solid border-slate-900/90">
+          <p class="ml-4 px-1 py-0.5 text-xs rounded-e-md text-slate-50 bg-slate-900/80">{status}</p>
+        </div>
+      </div>
 
-  <section>
-    <p>{repo}</p>
-    <p>{demo}</p>
-    <p>{status}</p>
-    <p>{tags}</p>
-  </section>
+      <img src={img} alt={title} class="rounded-2xl shadow-md" />
+    </section>
 
-  <section class="prose">
-    <Content />
-  </section>
+    <section class="flex flex-col items-center mx-4 py-4">
+
+      <div class="flex gap-10 justify-evenly items-center pb-4">
+        <a href={repo} class="py-2 px-3 border-2 border-solid border-slate-900/30 rounded-xl transform transition-all duration-300 ease-in-out hover:bg-teal-600/30 hover:text-teal-700 hover:scale-125">
+          <i class="ph-duotone ph-github-logo" style="font-size: 24px;"></i>
+        </a>
+        <a href={demo} class="py-2 px-3 border-2 border-solid border-slate-900/30 rounded-xl transform transition-all duration-300 ease-in-out hover:bg-teal-600/30 hover:text-teal-700 hover:scale-125">
+          <i class="ph-duotone ph-devices" style="font-size: 24px;"></i>
+        </a>
+      </div>
+    </section>
+
+    <section class="pb-8 mx-4">
+      <div class="flex flex-wrap gap-2">
+        {
+          tags.map((tag) => (
+            <Pill colors="text-slate-50 border-teal-800 bg-gradient-to-bl from-teal-600 via-teal-700 to-teal-900 to-75%">
+              {tag}
+            </Pill>
+          ))
+        }
+      </div>
+    </section>
+
+    <section class="prose prose-h3:text-teal-700 prose-strong:text-slate-900 prose-li:marker:text-teal-700/50 mx-4">
+      <Content />
+    </section>
 </ma>
 </BaseLayout>
