feat: clientrouter and env

--- a/lombardidev-astro/src/components/layout/Gallery.astro
+++ b/lombardidev-astro/src/components/layout/Gallery.astro
@@ -22,9 +22,7 @@ const { title, description, class: className } = Astro.props as Props;
 
   <div class="w-full mx-auto text-center">
     <CallToAction
-      href="mailto:contactos@lombardidev.ar"
-      target="_blank"
-      rel="noopener noreferrer"
+      href="/projects"
       class="py-2 px-8 w-auto text-center rounded-full no-underline shadow-md text-slate-50 bg-gradient-to-r from-teal-700 via-green-500 to-teal-900"
     >
       Ver más
