--- a/lombardidev-astro/src/components/layout/Head.astro
+++ b/lombardidev-astro/src/components/layout/Head.astro
@@ -1,4 +1,6 @@
 ---
+import { ClientRouter } from 'astro:transitions';
+
 interface Props {
   title?: string
   description?: string
@@ -52,5 +54,8 @@ const {
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2/src/duotone/style.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2/src/regular/style.css" />
+
+  {/** Transitions */}
+  <ClientRouter />
 
 </head>
