--- a/lombardidev-astro/src/pages/projects.astro
+++ b/lombardidev-astro/src/pages/projects.astro
@@ -24,9 +24,9 @@ const works: CollectionEntry<'works'>[] = (
 ---
 
 <BaseLayout title={title} description={description} >
-  <main class="container flex-1 mt-24 max-w-7xl mx-auto bg-white">
+  <main class="container flex-1 pt-24 max-w-7xl mx-auto bg-white">
     <Hero
-      title="Proyectos"
+      title="Mis Proyectos"
       description="Listado completo de proyectos realizados"
       align="start"
       reverse
