--- a/lombardidev-astro/src/pages/index.astro
+++ b/lombardidev-astro/src/pages/index.astro
@@ -9,10 +9,13 @@ import Testimonials from '@/components/layout/Testimonials.astro';
 import CallToAction from '@/components/ui/CallToAction.astro';
 import Preview from '@/components/ui/Preview.astro';
 import BaseLayout from '@/layouts/BaseLayout.astro';
-import { getCollection } from 'astro:content';
+import { getCollection, type CollectionEntry } from 'astro:content';
 
-const works = (await getCollection('works')).sort(
-	(a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
+const works: CollectionEntry<'works'>[] = (await getCollection('works')).sort(
+(
+    a: CollectionEntry<'works'>,
+    b: CollectionEntry<'works'>
+  ) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()
 ).slice(0, 4)
 
 interface Props {
