--- a/lombardidev-astro/src/layouts/BaseLayout.astro
+++ b/lombardidev-astro/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import Footer from '@/components/layout/Footer.astro';
 import Head from '@/components/layout/Head.astro';
 import Header from '@/components/layout/Header.astro';
+import '@fontsource-variable/onest';
 import '@/styles/global.css';
 
 interface Props {
