--- a/lombardidev-astro/src/components/header/NavContent.astro
+++ b/lombardidev-astro/src/components/header/NavContent.astro
@@ -12,7 +12,7 @@ const { links, alternative } = Astro.props as {
         {
           !alternative
             ? (
-              <li class="py-3 w-full hover:text-teal-700 hover:bg-slate-900/20">
+              <li class="py-3 w-full hover:text-teal-700 hover:bg-slate-900/20 dark:hover:text-teal-500">
                 <a
                   aria-current={Astro.url.pathname === href}
                   class:list={[
