--- a/lombardidev-astro/src/components/layout/Features.astro
+++ b/lombardidev-astro/src/components/layout/Features.astro
@@ -28,18 +28,18 @@ const itemsFeatures = [
 ]
 ---
 
-<section class="px-4 pt-16 pb-4 bg-white">
+<section class="px-4 pt-16 pb-4 bg-white dark:bg-slate-900">
   <div>
-    <h2 class="text-3xl text-slate-900 font-semibold">¿En que puedo ayudarte?</h2>
-    <p class="text-lg text-teal-800 py-4 pl-2">Impulso ideas digitales que resuelven problemas reales.</p>
+    <h2 class="text-3xl text-slate-900 dark:text-slate-50 font-semibold">¿En que puedo ayudarte?</h2>
+    <p class="text-lg text-teal-800 dark:text-teal-500 py-4 pl-2">Impulso ideas digitales que resuelven problemas reales.</p>
   </div>
 
   <div class="grid grid-cols-1 md:grid-cols-2 gap-4 pb-4">
-    <CardContainer class="flex flex-col gap-1 p-4 rounded-2xl border border-solid border-slate-900/10 shadow-md">
+    <CardContainer class="flex flex-col gap-1 p-4 rounded-2xl border border-solid border-slate-900/10 dark:border-slate-50/20 shadow-md dark:shadow-slate-600/10">
       <CardFeacture features={itemsFeatures[0]} />
     </CardContainer>
 
-    <CardContainer class="flex flex-col gap-1 p-4 rounded-2xl border border-solid border-slate-900/10 shadow-md">
+    <CardContainer class="flex flex-col gap-1 p-4 rounded-2xl border border-solid border-slate-900/10 dark:border-slate-50/20 shadow-md dark:shadow-slate-600/10">
       <CardFeacture features={itemsFeatures[1]} />
     </CardContainer>
   </div>
