--- a/lombardidev-astro/src/components/layout/Footer.astro
+++ b/lombardidev-astro/src/components/layout/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import astroLogo from "@/assets/icons/full-logo-light.svg";
+import AstroLogo from "@/components/stack/AstroIcon.astro";
 
 const currentYear = new Date().getFullYear();
 
@@ -18,7 +18,7 @@ const socialLinks: Array<{ label: string; href: string; icon: string }> = [
 ---
 
 <footer
-  class="h-auto pt-5 text-xl font-light bg-white dark:bg-gray-950 content-center border-t-[0.5px] border-slate-300"
+  class="h-auto pt-5 text-xl font-light bg-white dark:bg-slate-900 content-center border-t-[0.5px] border-slate-300 dark:border-slate-600/20"
 >
   <section
     class="max-w-7xl mx-auto flex flex-col justify-center items-center gap-2"
@@ -27,11 +27,7 @@ const socialLinks: Array<{ label: string; href: string; icon: string }> = [
       <p class="flex flex-row items-center">
         Desarrollado con
         <a href="https://astro.build/" target="_blank" no-referrer no-opener>
-          <img
-            src={astroLogo.src}
-            alt="Astro Homepage"
-            class="w-24 h-auto px-2"
-          />
+          <AstroLogo class="w-24 h-auto px-2"/>
         </a>
       </p>
       <p>&copy; {currentYear} @lombardidev</p>
@@ -46,7 +42,7 @@ const socialLinks: Array<{ label: string; href: string; icon: string }> = [
                 target="_blank"
                 no-referrer
                 no-opener
-                class="hover:text-teal-700 focus:text-teal-700 hover:font-semibold transition-colors ease-in-out duration-300"
+                class="hover:text-teal-700 dark:hover:text-teal-500 focus:text-teal-700 hover:font-semibold transition-colors ease-in-out duration-300"
               >
                 <span>{link.label}</span>
                 <i class={`ph-duotone ${link.icon} sr-only`} />
@@ -62,7 +58,7 @@ const socialLinks: Array<{ label: string; href: string; icon: string }> = [
         <img
           alt="Product owner"
           src="https://scrummanager.com/intranet/files/credential/8/smalllogo.png"
-          class="w-24 h-auto px-2"
+          class="w-24 h-auto px-2 dark:invert"
         />
       </a>
     </div>
