--- a/lombardidev-astro/src/components/ui/Pill.astro
+++ b/lombardidev-astro/src/components/ui/Pill.astro
@@ -6,6 +6,6 @@ interface Props {
 const { colors } = Astro.props as Props;
 ---
 
-<div class={`flex py-1 px-4 gap-2 rounded-full text-medium leading-snug whitespace-nowrap border-2 border-solid ${colors}`} >
+<div class={`flex flex-col py-2 px-4 gap-1 rounded-xl items-center justify-center text-sm border-[0.5px] border-solid border-slate-900/10 dark:border-slate-50/10 transition-colors duration-300 ease-in-out ${colors}`} >
   <slot />
 </div>
