style: improving responsive model in homepage

--- a/lombardidev-astro/src/components/layout/Features.astro
+++ b/lombardidev-astro/src/components/layout/Features.astro
@@ -28,7 +28,7 @@ const itemsFeatures = [
 ]
 ---
 
-<section class="px-4 pt-16 pb-4 bg-white dark:bg-slate-900">
+<section class="px-4 pt-16 pb-4 bg-white dark:bg-slate-900 md:h-screen md:pt-24 md:px-36">
   <div>
     <h2 class="text-3xl text-slate-900 dark:text-slate-50 font-semibold">¿En que puedo ayudarte?</h2>
     <p class="text-lg text-teal-800 dark:text-teal-500 py-4 pl-2">Impulso ideas digitales que resuelven problemas reales.</p>
