--- a/lombardidev-astro/src/components/header/NavContent.astro
+++ b/lombardidev-astro/src/components/header/NavContent.astro
@@ -12,12 +12,12 @@ const { links, alternative } = Astro.props as {
         {
           !alternative
             ? (
-              <li class="py-3 w-full hover:text-teal-700 hover:bg-slate-900/20 dark:hover:text-teal-500">
+              <li class="py-3 mx-1 w-full hover:text-teal-700 hover:bg-slate-900/20 dark:hover:text-teal-500 md:text-center md:hover:bg-transparent">
                 <a
                   aria-current={Astro.url.pathname === href}
                   class:list={[
-                    "px-4 py-3 w-full md:py-1 md:px-2 rounded-xl transition-colors ease-in-out duration-300",
-                    "md:hover:text-green-500 md:focus:text-green-500",
+                    "px-4 py-3 w-full text-center md:py-2 rounded-xl md:rounded-2xl transition-colors ease-in-out duration-300",
+                    "md:hover:text-teal-500 md:focus:text-teal-500",
                     {
                       "md:bg-green-300/30":
                         Astro.url.pathname === href ||
@@ -26,7 +26,7 @@ const { links, alternative } = Astro.props as {
                   ]}
                   href={href}
                 >
-                  <span class="font-base">{label}</span>
+                  <span class="font-base whitespace-nowrap">{label}</span>
                 </a>
               </>
             )
