--- a/lombardidev-astro/src/components/layout/Contact.astro
+++ b/lombardidev-astro/src/components/layout/Contact.astro
@@ -3,7 +3,7 @@ import CallToAction from "../ui/CallToAction.astro";
 
 ---
 
-<aside class="flex flex-col gap-12 text-center py-20 px-6 border-t border-b border-solid border-slate-900/10 shadow-md shadow-slate-900/10">
+<aside class="flex flex-col gap-12 text-center py-20 px-6 border-t border-b border-solid border-slate-900/10 shadow-md shadow-slate-900/10 md:py-40">
     <h3 class="text-2xl text-center m-auto max-w-[20ch]">Construyamos juntos algo increíble</h3>
   
     <div class="m-auto">
