--- a/lombardidev-astro/src/components/layout/Footer.astro
+++ b/lombardidev-astro/src/components/layout/Footer.astro
@@ -18,22 +18,21 @@ const socialLinks: Array<{ label: string; href: string; icon: string }> = [
 ---
 
 <footer
-  class="h-auto pt-5 text-xl font-light bg-white dark:bg-slate-900 content-center border-t-[0.5px] border-slate-300 dark:border-slate-600/20"
+  class="h-auto w-full pt-5 text-xl font-light bg-white dark:bg-slate-900 content-center border-t-[0.5px] border-slate-300 dark:border-slate-600/20 md:pb-5"
 >
-  <section
-    class="max-w-7xl mx-auto flex flex-col justify-center items-center gap-2"
-  >
-    <div class="flex flex-col items-center gap-2 pt-2">
+  <section class="max-w-7xl mx-auto flex flex-col justify-center items-center gap-2 md:flex-row md:justify-between">
+    <div class="flex flex-col items-center gap-2 pt-2 md:ml-3 md:items-start md:gap-6">
       <p class="flex flex-row items-center">
         Desarrollado con
         <a href="https://astro.build/" target="_blank" no-referrer no-opener>
           <AstroLogo class="w-24 h-auto px-2"/>
         </a>
       </p>
-      <p>&copy; {currentYear} @lombardidev</p>
+      <p>By <strong class="md:bg-teal-700 md:p-1 md:text-slate-50 md:rounded-2xl md:mx-1">@lombardidev</strong>, since {currentYear}</p>
     </div>
-    <div class="flex flex-row items-center justify-end pb-4 text-lg">
-      <ul class="flex flex-row gap-5">
+
+    <div class="flex flex-row items-center justify-end pb-4 text-lg md:justify-center">
+      <ul class="flex flex-row gap-5 md:flex-col md:gap-6">
         {
           socialLinks.map((link) => (
             <li class="h-5">
@@ -42,10 +41,10 @@ const socialLinks: Array<{ label: string; href: string; icon: string }> = [
                 target="_blank"
                 no-referrer
                 no-opener
-                class="hover:text-teal-700 dark:hover:text-teal-500 focus:text-teal-700 hover:font-semibold transition-colors ease-in-out duration-300"
+                class="md:flex md:items-center md:gap-2 hover:text-teal-700 dark:hover:text-teal-500 focus:text-teal-700 hover:scale-125 transition-colors ease-in-out duration-300"
               >
                 <span>{link.label}</span>
-                <i class={`ph-duotone ${link.icon} sr-only`} />
+                <i class={`ph-duotone ${link.icon} hidden md:inline`} style="font-size: 24px;" />
               </a>
             </li>
           ))
@@ -53,7 +52,7 @@ const socialLinks: Array<{ label: string; href: string; icon: string }> = [
       </ul>
     </div>
 
-    <div class=" text-center">
+    <div class=" text-center pr-4">
       <a href="https://scrummanager.com/website/c/profile/member.php?id=48869">
         <img
           alt="Product owner"
