--- a/lombardidev-astro/src/components/layout/Testimonials.astro
+++ b/lombardidev-astro/src/components/layout/Testimonials.astro
@@ -48,7 +48,7 @@ const testimonials = [
 ]
 ---
 
-<section class="py-16 px-4 bg-white dark:bg-slate-900">
+<section class="py-16 px-4 bg-white dark:bg-slate-900 md:h-screen md:px-36">
   <div class="max-w-4xl mx-auto text-center mb-12">
     <h2 class="text-3xl font-bold text-slate-900 dark:text-white text-left">Testimonios</h2>
     <p class="mt-4 pb-4 text-slate-600 dark:text-slate-200 text-left">
