--- a/lombardidev-astro/src/components/ui/ThemeToggle.astro
+++ b/lombardidev-astro/src/components/ui/ThemeToggle.astro
@@ -1,6 +1,6 @@
 ---
 ---
-<button id="themeToggle">
+<button id="themeToggle" class="hover:text-teal-700">
   <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill-rule="evenodd" viewBox="0 0 256 256">
     <g class="sun">
       <path d="M184,128a56,56,0,1,1-56-56A56,56,0,0,1,184,128Z" opacity="0.2"></path>
