--- a/lombardidev-astro/src/layouts/BaseLayout.astro
+++ b/lombardidev-astro/src/layouts/BaseLayout.astro
@@ -14,7 +14,7 @@ const { title, description } = Astro.props
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<Head title={title} description={description} />
 	<Header />
 	<body>
