feat: add metadata

--- a/lombardidev-astro/src/components/layout/Head.astro
+++ b/lombardidev-astro/src/components/layout/Head.astro
@@ -13,10 +13,10 @@ interface Props {
 const {
   title = 'Porfolio Web | @lombardidev',
   description = 'Porfolio Web de Lombardi Matias',
-  image = '',
+  image = '/logomain.png',
   content = 'Marca descriptiva de @lombardidev',
-  url = '',
-  domain = ''
+  url = 'https://lombardidev.vercel.app/',
+  domain = 'vercel.app'
 } = Astro.props
 ---
 
