feat: new project and fix styles components

--- a/lombardidev-astro/src/components/layout/Head.astro
+++ b/lombardidev-astro/src/components/layout/Head.astro
@@ -50,7 +50,7 @@ const {
   <link rel="canonical" href={url} />
 
   {/** Links / CSS / Icons  */}
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/logomain.png" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2/src/duotone/style.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.2/src/regular/style.css" />
