--- a/lombardidev-astro/src/pages/index.astro
+++ b/lombardidev-astro/src/pages/index.astro
@@ -59,7 +59,7 @@ const { title , description } = Astro.props
 		<Gallery
 			title="Mis proyectos"
 			description="Echa un vistazo a algunos de mis trabajos destacados."	
-			class="mx-4 py-16 md:h-screen md:pt-24 md:px-36"
+			class="mx-4 py-16 md:h-auto md:pt-24 md:px-36"
 		>
 			<article>
 			<Grid variant='offset'>
